# FreeFlow

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt  vcpkg.json
assets/configs/: fish2d_active_strain.json  fish2d_lbs_control.json  vortexstreet2d.json
assets/mesh/: banana.mesh  beam.mesh  clownfish.mesh  eel.mesh  eight.mesh  enneper_2.mesh  fish2d.mesh  jellyfish.mesh  octopus.mesh  sphere2d.mesh  sphere_coarse.mesh  sphere_fine.mesh  spiral.mesh  torus.mesh  trumpet1.mesh  tube.mesh  turtle.mesh
include/FSI_Simulator/common/: CudaCommon.cuh  MathUtils.hpp  SparseMatrixUtils.hpp  Types.hpp
include/FSI_Simulator/control/: LBSControlUtils.cuh  LBSDataGpu.cuh  LBSSampling.hpp
include/FSI_Simulator/core/: FsiCoupling.hpp  SimulationTraits.hpp  Simulator2D.hpp  Simulator3D.hpp  SolidGeometry.hpp  SolidGeometryProxy_Device.cuh
include/FSI_Simulator/fem/: DeformableMesh.hpp  FemConfig.hpp  FemScene.hpp  ISolidSolver.hpp  NewtonKernels.cuh  NewtonSceneDataCpu.hpp  NewtonSolver.hpp  StaticBodyKernels.cuh  StaticBodySolver.hpp  VBDKernels.cuh  VBDSceneDataGpu.cuh  VBDSolver.hpp
include/FSI_Simulator/fsi/: FsiCouplingDataGpu.cuh  FsiCouplingUtils.cuh
include/FSI_Simulator/graph/: ColoringAlgorithms.hpp  Graph.hpp  Gready.hpp  Mcs.hpp  TetMeshVertexGraph.hpp
include/FSI_Simulator/io/: MeshLoader.hpp  ObjLoader.hpp  VtkWriter.hpp
include/FSI_Simulator/lbm/: LbmConstants.hpp  LbmDataTypes.cuh  LbmFlowField2D.hpp  LbmFlowField3D.hpp  LbmInitializer.hpp  LbmUtilsFunc.cuh  LbmUtilsFunc.txt
include/FSI_Simulator/optimizer/: BacktrackingLineSearch.hpp  DirectSolver.hpp  LineSearch.hpp  NewtonOptimizer.hpp
include/FSI_Simulator/utils/: Config.hpp  CudaArray.cuh  CudaErrorCheck.cuh  DataStructures.hpp  Logger.hpp  NumericUtils.cuh  Profiler.hpp  StringUtils.hpp
rl/: config_template_2d.json  env.py  parameters.json  sac.py  task.json  task_2d.json  train.py  utils.py
scripts/: fish2d_active_strain.py  fish2d_lbs.py  fish3d_active_strain.py  fish3d_lbs.py  vortex_3d.py  vortex_street_2d.py
src/app/: StaticSphere3D.cpp
src/common/: MathUtils.cpp
src/control/: LBSControl.cu  LBSSampling.cpp
src/core/: FsiCoupling2D.cu  FsiCoupling3D.cu  Simulator2D.cpp  Simulator3D.cpp
src/fem/: DeformableMesh.cpp  FemScene.cpp  NewtonKernels2D.cu  NewtonKernels3D.cu  NewtonSolver.cpp  StaticBodyKernels.cu  StaticBodySolver.cpp  VBDKernels2D.cu  VBDKernels3D.cu  VBDSolver.cpp
src/fsi/: FsiCouplingKernels.cu
src/graph/: ColoringAlgorithms.cpp  gready.cpp  mcs.cpp
src/io/: MeshLoader.cpp  ObjLoader.cpp
src/lbm/: LbmConstants.cu  LbmFlowField2D.cpp  LbmFlowField3D.cpp  LbmInitializer2D.cu  LbmInitializer3D.cu  LbmUtilsFunc.cu
src/optimizer/: BacktrackingLineSearch.cpp  DirectSolver.cpp  LineSearch.cpp  NewtonOptimizer.cpp
src/python/: bindings.cpp
src/utils/: Config.cpp  Logger.cpp  Profiler.cpp
